fix: enforce Card ID on check-in and migrate session images to S3